[UPDATE] whatsapp button translated

--- a/frontend/public/locales/pt/translation.json
+++ b/frontend/public/locales/pt/translation.json
@@ -960,7 +960,8 @@
     "buy": "Comprar",
     "button": "Explorar",
     "bottom_button": "Continuar Comprar"
-  }
+  },
+  "whatsapp_contact_me": "Precisa de ajuda? Fale conosco!"
 }
 
 
