--- a/frontend/public/locales/en/translation.json
+++ b/frontend/public/locales/en/translation.json
@@ -958,6 +958,7 @@
     "buy": "Buy",
     "button": "Search",
     "bottom_button": "Continue Shopping"
-  }
+  },
+  "whatsapp_contact_me": "Need help? Contact us!"
 }
 
