--- a/frontend/public/locales/pt/translation.json
+++ b/frontend/public/locales/pt/translation.json
@@ -372,6 +372,16 @@
       }
     }
   },
+  "book": {
+    "1": {},
+    "2": {},
+    "3": {},
+    "4": {},
+    "5": {},
+    "6": {},
+    "7": {},
+    "8": {}
+  },
   "tranings_mentorships_description_p": "Descubra como a mentoria pode transformar sua carreira.",
   "tranings_mentorships_description_h2": "Mentoria Profissional: O Que é e Quais São as Suas Vantagens?",
   "tranings_mentorships_description_h2_p": " A mentoria profissional é um processo no qual um profissional mais experiente (mentor) orienta e apoia outro profissional menos  experiente (mentorado) no desenvolvimento da sua carreira. Essa relação baseia-se na troca de experiências, conhecimentos e conselhos práticos, ajudando o mentorado a superar desafios e desenvolver competências.",
